--- a/CSS/Flukeout.css
+++ b/CSS/Flukeout.css
@@ -10,9 +10,10 @@
 8. bento orange.small
 9. plate, bento
 10. *
-12. plate *
-13. plate + apple ?????
-14. bento ~ pickle
+11. plate *
+12. plate + apple
+13. bento ~ pickle
+14. bento > pickle
 15.
 16.
 17.
