--- a/CSS/GridGarden.css
+++ b/CSS/GridGarden.css
@@ -282,6 +282,12 @@
 
 
 /*25*/
+#garden {
+    display: grid;
+    grid-template-columns: 75px 3fr 2fr;
+    grid-template-rows: 100%;
+}
+
 
 /*26*/
 
